fix layout bug of tab list in snippet note

--- a/browser/main/Detail/SnippetNoteDetail.styl
+++ b/browser/main/Detail/SnippetNoteDetail.styl
@@ -131,7 +131,7 @@ $info-height = 75px
     border-color $brand-color
 .tabList-item-button
   width 100%
-  height 100%
+  height 29px
   navButtonColor()
   border-left 4px solid transparent
 .tabList-item-deleteButton
